implemented unit tests, bugfixing, started adding documentation